tests/testcases/errors/BCE0084-1.boo
"""
BCE0084-1.boo(5,16): BCE0084: Static constructors can not declare parameters.
"""
class Foo:
	static def constructor(param):
		pass

